--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 
-title: Catbook #Your awesome title
-email: #youremail@domain.com
+title: 南方有梦，北方有你
+email: 709891374[#]qq.com
 description: > # this means to ignore newlines until "baseurl"
   Write an awesome description for your new site here. You can edit this
   line in _config.yml. It will appear in your document head meta (for
@@ -18,11 +18,11 @@ google_analytics: #UA—XXXXXXXX-X
 disqus_shortname: #disqus shortname
 
 user:
-  name: Catbook
+  name: 南方有梦
   pic: /assets/img/cat.jpg
   picAlt: "catbook"
   job: a category-centric theme
-  aboutme: true # comment this out if you don't need the 'about' page.
+  aboutme: true comment this out if you don't need the 'about' page.
 
 exclude:
   - README.md
