--- a/_config.yml
+++ b/_config.yml
@@ -21,7 +21,7 @@ user:
   name: 南方有梦
   pic: /assets/img/cat.jpg
   picAlt: "catbook"
-  job: a category-centric theme
+  job: 微信公众号：南柯酒馆
   aboutme: true comment this out if you don't need the 'about' page.
 
 exclude:
